
Release: 0.7rc1 - release candidate 1
Date 30th Jul 2009

Changes since 0.6.x
-------------------

Please Note - This release represents a major overhaul of entire library.

It breaks backward compatibility with previous releases.

* Internal module hierarchy has been completely overhauled and redesigned. This
  fixes up a lot of inconsistencies and problems with interdependent imports.   All public classes, objects, functions and constants are still published via the main netaddr module namespace as in previous releases.

* The Addr base class is no more. This removes the link between EUI and IP
  functionality so the library is can now easily be split into distinct units
  without many interdependencies between layer 2 and layer 3 functionality.

* Strategy classes and objects have been replaced with a group of strategy
  modules in their own netaddr.strategy namespace. Each IP or EUI address object
  now holds a reference to a module rather than an singleton object.

* Many operations that were previous static class methods are now presented as
functions in the relevant modules.
  
* The IP and CIDR classes have been replaced with two new classes called
  IPAddress and IPNetwork respectively. This rename is important as they have
  changed significantly. The notion of an individual IP address and an IP  
  network or subnet has been made more obvious. IPAddress objects are now true
  scalars and do not evaluate in a list or tuple context at all. They also do
  not support any notion of a netmask or CIDR prefix; this is the primary
  function of an IPNetwork object.

* Abritrary IP ranges and are still supported but a lot of their functionality
has also been exposed via functions.

* IP globs (Wildcard class previously) has been moved into its own submodule. 

* The use of custom descriptor classes has been completely discontinued.

* All methods and properties that previously used or supported the 'fmt'