@@ -6,47 +6,34 @@ include LICENSE
 include MANIFEST.in
 include README
 include THANKS
-
 include nash
-include release.bat
 include release.py
-include release.sh
 include setup.cfg
 include setup.py
 include setup_egg.py
 
-include docs
 include docs/epydoc.cfg
 include docs/epydoc.css
-
 recursive-include docs/api *
 
 include netaddr/__init__.py
 include netaddr/core.py
 include netaddr/fbsocket.py
 
-include netaddr/eui/__init__.py
-include netaddr/eui/ieee.py
-include netaddr/eui/*.idx
-include netaddr/eui/*.txt
+recursive-include netaddr/eui *.py *.txt *.idx
 
-include netaddr/ip/__init__.py
-include netaddr/ip/glob.py
-include netaddr/ip/iana.py
-include netaddr/ip/intset.py
+recursive-include netaddr/ip *.py 
 include netaddr/ip/ipv4-address-space
 include netaddr/ip/ipv6-address-space
 include netaddr/ip/multicast-addresses
-include netaddr/ip/rfc1924.py
-include netaddr/ip/sets.py
 
-include netaddr/strategy/__init__.py
-include netaddr/strategy/eui48.py
-include netaddr/strategy/eui64.py
-include netaddr/strategy/ipv4.py
-include netaddr/strategy/ipv6.py
+recursive-include netaddr/strategy *.py
 
-recursive-include netaddr/tests *.txt *.py *.sh
+include netaddr/tests/run_all.py
+recursive-include netaddr/tests/core *.txt
+recursive-include netaddr/tests/eui *.txt
+recursive-include netaddr/tests/ip *.txt
+recursive-include netaddr/tests/strategy *.txt
 
 global-exclude *.pyc
 global-exclude *.svn*
