@@ -21,7 +21,9 @@ various improvements or submitting actual code. Here is a list of these people
 
     James William Pye <jwp AT gmail.com>
 
-    Victor Stinner <victor.stinner AT haypocalc.com>
+    Chaitan Rogers <chaitan DOT rogers AT gmail.com>
+
+    Victor Stinner <victor DOT stinner AT haypocalc.com>
 
 Thanks to everyone on the netaddr mailing list, those who raised bug reports
 and to all those who have, directly and indirectly, guided and influenced the 
