@@ -27,8 +27,15 @@ from netaddr.ip.glob import IPGlob, cidr_to_glob, glob_to_cidrs, \
 
 from netaddr.eui import EUI, IAB, OUI
 
+from netaddr.strategy.ipv4 import valid_str as valid_ipv4
+
+from netaddr.strategy.ipv6 import valid_str as valid_ipv6
+
 from netaddr.strategy.eui48 import mac_eui48, mac_unix, mac_cisco, \
-    mac_bare, mac_pgsql
+    mac_bare, mac_pgsql, valid_str as valid_mac
+
+from netaddr.strategy.eui48 import mac_eui48, mac_unix, mac_cisco, \
+    mac_bare, mac_pgsql, valid_str as valid_mac
 
 __all__ = [
     #   Custom exceptions.
@@ -38,7 +45,7 @@ __all__ = [
     'EUI', 'IAB', 'OUI',
 
     #   MAC address dialect classes.
-    'mac_bare', 'mac_cisco', 'mac_eui48', 'mac_pgsql', 'mac_unix',
+    'mac_bare', 'mac_cisco', 'mac_eui48', 'mac_pgsql', 'mac_unix', 'valid_mac',
 
     #   IP, CIDR and IP range related classes and functions.
     'IPAddress', 'IPNetwork', 'IPRange', 'IPSet',
@@ -46,6 +53,7 @@ __all__ = [
     'cidr_abbrev_to_verbose', 'cidr_exclude', 'cidr_merge', 'spanning_cidr',
     'iter_iprange', 'iprange_to_cidrs','iter_unique_ips',
     'smallest_matching_cidr', 'largest_matching_cidr', 'all_matching_cidrs',
+    'valid_ipv4', 'valid_ipv6',
 
     #   IP globbing routines.
     'IPGlob', 'valid_glob', 'cidr_to_glob', 'glob_to_cidrs', 'glob_to_iptuple',
