@@ -125,6 +125,36 @@ def glob_to_iptuple(ipglob):
     return IPAddress('.'.join(start_tokens)), IPAddress('.'.join(end_tokens))
 
 #-----------------------------------------------------------------------------
+def glob_to_iprange(ipglob):
+    """
+    A function that accepts a glob-style IP range and returns the equivalent
+    IP range.
+
+    @param ipglob: an IP address range in a glob-style format.
+
+    @return: an IPRange object.
+    """
+    if not valid_glob(ipglob):
+        raise AddrFormatError('not a recognised IP glob range: %r!' % ipglob)
+
+    start_tokens = []
+    end_tokens = []
+
+    for octet in ipglob.split('.'):
+        if '-' in octet:
+            tokens = octet.split('-')
+            start_tokens.append(tokens[0])
+            end_tokens.append(tokens[1])
+        elif octet == '*':
+            start_tokens.append('0')
+            end_tokens.append('255')
+        else:
+            start_tokens.append(octet)
+            end_tokens.append(octet)
+
+    return IPRange('.'.join(start_tokens), '.'.join(end_tokens))
+
+#-----------------------------------------------------------------------------
 def iprange_to_globs(start, end):
     """
     A function that accepts an arbitrary start and end IP address or subnet
