@@ -1,20 +1,20 @@
 Name                Stmts   Exec  Cover   Missing
 -------------------------------------------------
-__init__               13     12    92%   11
-core                   65     53    81%   66, 88-89, 98-100, 162, 169, 175-176, 179, 182
-eui/__init__          297    217    73%   50, 55-57, 68, 109, 131, 171-182, 212-214, 219, 232, 252, 256, 269, 319, 323, 352-354, 359, 364-367, 373, 379, 388, 437-440, 445, 449-468, 472, 480, 495-496, 503-506, 515-516, 523-526, 533-536, 543-546, 607-611
+__init__               15     14    93%   11
+core                   65     55    84%   66, 88-89, 98-100, 162, 175-176, 179
+eui/__init__          287    210    73%   51, 56-58, 69, 112, 159-170, 201-203, 208, 221, 248, 297, 301, 330-332, 337, 342-345, 351, 357, 366, 415-418, 423, 427-446, 450, 458, 473-474, 481-484, 493-494, 501-504, 511-514, 521-524, 585-589
 eui/ieee              117     91    77%   75, 122, 150-151, 201, 227-228, 253-259, 277-292, 297-298
-fbsocket              161    136    84%   47, 50-51, 58-59, 68, 72-74, 112, 132, 136, 156, 166, 182-183, 203, 214-216, 225, 228, 232, 247, 254, 258
-ip/__init__           723    571    78%   37-38, 49-50, 61-62, 73-74, 85-86, 97-98, 134-137, 140, 151-152, 171-182, 189, 196, 240, 252, 262, 283, 290-291, 297, 309, 323, 353, 369, 396, 413, 435-448, 461-473, 482, 491, 500, 509, 518, 525, 641-643, 648, 655-656, 662, 676, 691, 775, 790-796, 831-833, 843, 883-891, 910, 929-932, 941-944, 957, 984, 989, 999, 1026-1037, 1072, 1099-1123, 1131-1135, 1159-1160, 1172, 1176, 1180, 1191-1193, 1265-1268, 1285-1286, 1310, 1376, 1379, 1384, 1418, 1444-1445, 1484, 1490, 1520, 1525
-ip/glob               106     84    79%   60, 68, 73, 77, 80, 82, 84, 89, 91, 93, 108, 143, 173, 223, 232-234, 237, 240-241, 248, 252
+fbsocket              158    133    84%   47, 50-51, 58-59, 68, 72-74, 109, 129, 133, 153, 163, 179-180, 200, 211-213, 222, 225, 229, 244, 251, 255
+ip/__init__           762    625    82%   32, 39, 56-57, 68-69, 80-81, 92-93, 104-105, 116-117, 153-156, 159, 170-171, 190-201, 208, 215, 258, 270, 280, 301, 308-309, 315, 327, 341, 371, 387, 414, 431, 466-472, 491, 508, 517, 526, 535, 544, 551, 666-668, 673, 680-681, 687, 701, 716, 800, 815-821, 856-858, 868, 916, 935, 954-957, 966-969, 982, 1009, 1014, 1024, 1051-1062, 1097, 1124-1148, 1156-1160, 1184-1185, 1197, 1201, 1205, 1216-1218, 1290-1293, 1310-1311, 1335, 1401, 1404, 1409, 1443, 1469-1470, 1509, 1515, 1545, 1550, 1669, 1698, 1727
+ip/glob               122     85    69%   60, 68, 73, 77, 80, 82, 84, 89, 91, 93, 108, 137-155, 173, 203, 253, 262-264, 267, 270-271, 278, 282
 ip/iana               173    139    80%   68, 72, 76, 80, 91, 362-372, 390, 404-408, 415-432, 438
-ip/intset             289    147    50%   53, 58-60, 64, 69-71, 74-76, 79-81, 84, 119-125, 134, 136, 140, 142, 144, 147, 149, 154, 157, 162, 164, 168, 170, 173, 177, 180, 182, 184, 186, 211, 223-226, 235-251, 272, 293, 305, 393-404, 416, 427-436, 445-452, 457, 465-485, 494-507, 511-533
-ip/rfc1924             31      0     0%   6-63
+ip/intset             289    147    50%   53, 58-60, 64, 69-71, 74-76, 79-81, 84, 119-125, 134, 136, 140, 142, 144, 147, 149, 154, 157, 162, 164, 168, 170, 173, 177, 180, 182, 184, 186, 211, 223-226, 235-251, 272, 293, 306, 394-405, 417, 428-437, 446-453, 458, 466-486, 495-509, 513-535
+ip/rfc1924             31     25    80%   46, 59-63
 ip/sets               192    166    86%   28, 35, 75, 152, 162, 191, 206, 217-218, 227-230, 239-242, 252, 277-280, 290, 441-445, 453
 strategy/__init__     116     93    80%   44, 47, 53, 72, 97, 121, 127, 134-137, 154, 191, 207, 210, 215, 222-225, 254, 270, 275-277
 strategy/eui48        133    113    84%   139-147, 173, 190, 246-248, 264-266, 283-285, 293
 strategy/eui64         72     48    66%   72-79, 94-96, 101, 141-149, 153, 161, 165, 169, 177, 185
-strategy/ipv4          81     65    80%   25-26, 80-87, 97, 103-104, 122, 174, 187, 193
+strategy/ipv4          81     65    80%   25-26, 79-86, 96, 102-103, 121, 173, 186, 192
 strategy/ipv6         104     91    87%   20-25, 108, 124, 157-158, 210, 226, 240, 244, 248
 -------------------------------------------------
-TOTAL                2673   2026    75%   
+TOTAL                2717   2100    77%   
